examples/test/testpolicy11586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11586
  namespace: namespace326
spec:
  podSelector:
    matchLabels:
      key37: value39
      key38: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value0
          key48: value4
      podSelector:
        matchLabels:
          key7: value34
